feat: kratos gen client and service code
